validation download added for user

--- a/FileZipper-WithGrid/FileArchiver.MVC/Views/Home/AdminLoginView.cshtml
+++ b/FileZipper-WithGrid/FileArchiver.MVC/Views/Home/AdminLoginView.cshtml
@@ -99,7 +99,7 @@
                     url: "/Home/DownloadFile/" + broj,
                     contentType: "application/text",
                     success: function (response) {
-                        window.location = '@Url.Action("DownloadFileQuery", "Home")?fileId=' + broj + ''
+                        response ? window.location = '@Url.Action("DownloadFileQuery", "Home")?fileId=' + broj + '' : alert("You can download only your files");
                     }
                 });
             }
