clean, views changes

--- a/FileZipper/FileArchiver.MVC/Views/Home/AdminLoginView.cshtml
+++ b/FileZipper/FileArchiver.MVC/Views/Home/AdminLoginView.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div>
                 <div class="form-group mt-4">
-                    <ejs-grid id="Grid" dataSource="@ViewBag.DataSource" allowSorting="true" allowPaging="true" width="1200" height="400" load="load" allowResizing="true" enableHover="true" enableStickyHeader="true" toolbar="@(new List<string>() {"Delete", "Search"})" rowSelected="rowSelected">
+                    <ejs-grid id="Grid" dataSource="@ViewBag.DataSource" allowSorting="true" allowPaging="true" width="1200" height="400" load="load" allowResizing="true" enableHover="true" enableStickyHeader="true" toolbar="@(new List<string>() {"Search"})" rowSelected="rowSelected">
                         <e-grid-selectionSettings persistSelection="true"></e-grid-selectionSettings>
                         <e-grid-columns>
                             <e-grid-column type="checkbox" width="50"></e-grid-column>
