--- a/FileZipper/FileArchiver.MVC/Views/Home/InsertFileForm.cshtml
+++ b/FileZipper/FileArchiver.MVC/Views/Home/InsertFileForm.cshtml
@@ -9,12 +9,12 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("Username", "Please select a username", new { @class = "ml-4 mb-4" })
-            @Html.DropDownListFor(x => x.Username, new SelectList(Model.Users.Select(x => x.Username)), null, new { @class = "dropdown mt-4", id = "username" })
+            @Html.Label("Username", "Please select an employee", new { @class = "ml-4 mb-4" })
+            @Html.DropDownListFor(x => x.Username, new SelectList(Model.Users.Select(x => x.Name)), null, new { @class = "dropdown mt-4", id = "username" })
         </div>
         <div class="form-group">
             @Html.Label("Username", "Please select a document", new { @class = "ml-4 mb-4" })
-            @Html.DropDownListFor(x => x.DocumentName, new SelectList(Model.Documents.Select(x => x.DocumentName)), "", new { @class = "dropdown mt-4", id = "documentName" })
+            @Html.DropDownListFor(x => x.DocumentName, new SelectList(Model.Documents.Select(x => x.DocumentName)), null, new { @class = "dropdown mt-4", id = "documentName" })
         </div>
         <div class="form-group">
             @Html.TextBoxFor(x => x.File.FileData, null, htmlAttributes: new { type = "file", @class = "text-center ml-2", id = "fileId" })
@@ -31,24 +31,12 @@
 @section scripts {
     <script>
         let regexForFile;
-        let documentName;
         $("#uploadButton").prop('disabled', true);
         $('#documentName').change(() => {
-            documentName = $('#documentName').val();
-            if (documentName === "") {
-                $("#uploadButton").prop('disabled', true);
-                return;
-            }
-            if ($('#documentName').val() == '' || $("#fileId").val() == '' || $("#fileId").val() == null) {
-                $("#uploadButton").attr('disabled', 'disabled');
-                alert("You must choose a username, document type and file first!")
-                return;
-            }
-            $("#uploadButton").prop('disabled', false);
             $.ajax({
-                'url': '/Home/GetMaskForDocument/' + documentName + '/',
+                'url': '/Home/GetMaskForDocument/' + $('#documentName').val() + '/',
                 'type': 'GET',
-                'data': documentName,
+                'data': $('#documentName').val(),
                 'dataType': 'text',
                 'async': false,
                 'success': function (data) {
@@ -76,12 +64,13 @@
                 $('#uploadButton').prop('disabled', false);
             }
 
-            if ($('#documentName').val() == '' || $("#fileId").val() == '' || $("#fileId").val() == null) {
+            if (!$("#fileId").val()) {
                 $("#uploadButton").attr('disabled', 'disabled');
                 alert("You must choose a username, document type and file first!")
                 return;
             }
         });
+
         $('#uploadFileForm').submit(function () {
             if ($('#documentName').val() == '' || $("#fileId").val() == '' || $("#fileId").val() == null) {
                 $("#uploadButton").attr('disabled', 'disabled');
